--- a/src/main/resources/templates/RootResource/root.html
+++ b/src/main/resources/templates/RootResource/root.html
@@ -2,24 +2,21 @@
 <html>
 
 <head>
-    <script type="module">
-        import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+    <script src="https://unpkg.com/@hotwired/turbo@7.0.0-beta.1/dist/turbo.es5-umd.js"></script>
+    <script>
+        window.onload = function () {
+            Turbo.connectStreamSource(new EventSource("/ranking/stream"));
+        }
     </script>
     <meta charset="UTF-8">
     <title>Hacker News</title>
 </head>
 
 <body>
-    <h1>Hello {name}</h1>
-    <turbo-frame id="ranking" src="/ranking">
-        <p>This message will be replaced by the response from /messages.</p>
-    </turbo-frame>
+    <h1>Hacker News</h1>
 
-    <turbo-stream action="append" target="messages">
-        <template>
-            <div id="message_1">My new message!</div>
-        </template>
-    </turbo-stream>
+    <div id="stream">Wird ersetzt</div>
+
 </body>
 
 </html>
